--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
@@ -502,7 +502,6 @@
     <string name="start_loc">தொடங்கும் இடம்</string>
     <string name="driver_loc">ஓட்டுனரின் இடம்</string>
     <string name="customer_2">வாடிக்கையாளர் 2</string>
-    <string name="kms">கி மீ</string>
     <string name="mark_delivered">ஒப்படைப்புக்கான அடையாள குறி</string>
     <string name="order_id">பொருட்டு ஐ டி</string>
     <string name="thanks_for_feedback">உங்கள் மதிப்புமிக்க கருத்துக்கு நன்றி</string>
@@ -635,9 +634,7 @@
     <string name="driver_to_customer">டிரைவர் குறிக்கின்ற வாடிக்கையாளர்</string>
     <string name="driver_to_driver">டிரைவர் குறிக்கின்ற டிரைவர்</string>
     <string name="rate_card">விலை அட்டை</string>
-    <string name="applicable_after">பொருந்தக்கூடிய பின்னர்  %1$s Kms</string>
-    <string name="distance_per_km">தூரம்\n(நிமிடம் ஒன்றுக்கு)</string>
-    <string name="per_km">(மீற்ற க்கான)</string>
+    <string name="applicable_after">பொருந்தக்கூடிய பின்னர்  %1$s</string>
     <string name="delivery_off">Delivery OFF</string>
 
     <string name="Yesterday">நேற்று</string>
@@ -719,7 +716,7 @@
     <string name="pls_enter_some_msg">தயவு செய்து பிரச்சினை நுழைக்க</string>
 
     <string name="self_enroled">Self Enroled</string>
-    <string name="diffrential_pricing_rate">After %1$s Km, distance charge will be %2$s/Km</string>
+    <string name="diffrential_pricing_rate">After %1$s, distance charge will be %2$s</string>
     <string name="payment_sent">Payment Sent</string>
     <string name="delivery_fare">Delivery Fare</string>
     <string name="return_subsidy">Return Subsidy</string>
@@ -849,11 +846,8 @@
     <string name="closed_on">Closed On</string>
     <string name="complaint">Complaint</string>
     <string name="raisedOn">Raised On</string>
-    <string name="range_in_km">Range (In km)</string>
     <string name="return_fare_aplicable">Return Fare If Applicable</string>
-    <string name="per_km_wo_brack">PER Km</string>
     <string name="per_delivery">Per Delivery</string>
-    <string name="per_km_fare">Per km fare</string>
     <string name="return_fare">Return Fare</string>
     <string name="pick_up_wait_time">Pickup Wait Time fare</string>
     <string name="un_loading">un loading</string>
