--- a/JugnooNewDriver/jugnooNewDriver/src/progressive/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/progressive/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE resources [
-    <!ENTITY appname "Jugnoo">
+    <!ENTITY appname "Progressive">
     ]>
 <resources>
     <string name="app_name">&appname; Drivers</string>
