--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -954,6 +954,8 @@
     <string name="credits">Credits</string>
     <string name="enter_credits">Enter credits</string>
     <string name="please_enter_valid_phone">Please enter valid phone number</string>
+    <string name="get_credits">Receive credits from a friend</string>
+    <string name="get_credits_from_friends">Get credits from friends</string>
 
 
     <string-array name="CountryCodes">
