feat_credits: earn credits options in login

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -956,6 +956,7 @@
     <string name="please_enter_valid_phone">Please enter valid phone number</string>
     <string name="get_credits">Receive credits from a friend</string>
     <string name="get_credits_from_friends">Get credits from friends</string>
+    <string name="earn_credits_format">(Earn %s credits)</string>
 
 
     <string-array name="CountryCodes">
