--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -950,14 +950,17 @@
     <string name="refer_a_customer">Refer a Customer</string>
     <string name="advertise_for_us">Advertise for us</string>
     <string name="menu_label_credits">Driver Credits</string>
-    <string name="send_to_a_friend">Send to a friend</string>
+    <string name="send_to_a_friend">Driver को credits भेजें</string>
     <string name="credits">Credits</string>
-    <string name="enter_credits">Enter credits</string>
+    <string name="enter_credits">Credits दर्ज करें</string>
     <string name="please_enter_valid_phone">Please enter valid phone number</string>
     <string name="get_credits">Receive credits from a friend</string>
-    <string name="get_credits_from_drivers">Get credits from drivers</string>
+    <string name="get_credits_from_drivers">साथी Driver से credits लें</string>
     <string name="earn_credits_format">(%s credits कमाऐं)</string>
     <string name="hash_format">#%s</string>
+    <string name="credits_left_format">खाते में कुल credits %s</string>
+    <string name="please_enter_less_value">Please enter less value</string>
+    <string name="enter_phone_number_hinglish">Phone no दर्ज करें</string>
 
 
     <string-array name="CountryCodes">
