--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ar/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ar/strings.xml
@@ -373,7 +373,7 @@
     <string name="driver_to_customer">سائق للعميل</string>
     <string name="driver_to_driver">سائق لسائق</string>
     <string name="rate_card">سعر البطاقة</string>
-    <string name="applicable_after">Applicable after %1$s Kms</string>
+    <string name="applicable_after">Applicable after %1$s</string>
     <string name="per_km">(لكل كم)</string>
     <string name="delivery_off">OFF تسليم</string>
     <string name="Yesterday">في الامس</string>
@@ -385,7 +385,7 @@
     <string name="register_via_agent">تسجيل عن طريق وسيط</string>
     <string name="upload_Documents">وثائق للتحميل</string>
     <string name="last_trip_earning">الأرباح الماضي سائق رحلة ل</string>
-    <string name="diffrential_pricing_rate">After %1$sKm, distance charge will be \u20B9 %2$s/Km </string>
+    <string name="diffrential_pricing_rate">After %1$s, distance charge will be \u20B9 %2$s</string>
     <string name="payment_sent">ارسلت الدفعه</string>
     <string name="this_week_cap">هذا الاسبوع</string>
     <string name="ride_history_cap">ركوب التاريخ</string>
