--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-ta/strings.xml
@@ -460,7 +460,7 @@
     <string name="driver_to_customer">டிரைவர் குறிக்கின்ற வாடிக்கையாளர்</string>
     <string name="driver_to_driver">டிரைவர் குறிக்கின்ற டிரைவர்</string>
     <string name="rate_card">விலை அட்டை</string>
-    <string name="applicable_after">பொருந்தக்கூடிய பின்னர்  %1$s Kms</string>
+    <string name="applicable_after">பொருந்தக்கூடிய பின்னர்  %1$s</string>
     <string name="per_km">(மீற்ற க்கான)</string>
     <string name="delivery_off">Delivery OFF</string>
 
