--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-te/strings.xml
@@ -449,7 +449,7 @@
     <string name="driver_to_customer">కస్టమర్ డ్రైవర్</string>
     <string name="driver_to_driver">డ్రైవర్ డ్రైవర్</string>
     <string name="rate_card">రేటు కార్డ్</string>
-    <string name="applicable_after">వర్తించే తర్వాత  %1$s Kms</string>
+    <string name="applicable_after">వర్తించే తర్వాత  %1$s</string>
     <string name="per_km">(కి.మీ.లలో ప్రతి)</string>
     <string name="delivery_off">Delivery OFF</string>
 
