--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -807,7 +807,7 @@
     <string name="stripe_error_message">Oops! There was a problem configuring your stripe account.</string>
     <string name="account_details">Account Details</string>
     <string name="connect_with_stripe">Connect with stripe</string>
-    <string name="login_with_stripe">Login to Stripe</string>
+    <string name="login_with_stripe">View Stripe account</string>
 
 
     <string-array name="CountryCodes">
