--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -808,6 +808,7 @@
     <string name="account_details">Account Details</string>
     <string name="connect_with_stripe">Connect with stripe</string>
     <string name="login_with_stripe">View Stripe account</string>
+    <string name="city_unavailable">Sorry! Currently our services are not available in your city.</string>
 
 
     <string-array name="CountryCodes">
