--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -1040,6 +1040,8 @@
     <string name="who_are_we">Who are we?</string>
     <string name="facebook_not_installed">Facebook app not enabled</string>
     <string name="about">About</string>
+    <string name="select_city">Select City</string>
+    <string name="error_no_cities_found">No Cities Found!</string>
 
 
 </resources>
