--- a/JugnooNewDriver/jugnooNewDriver/src/swiss/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/swiss/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE resources [
-    <!ENTITY appname "Swiss">
+    <!ENTITY appname "Swiss Taxi">
     ]>
 <resources>
     <string name="app_name">&appname; Drivers</string>
