--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -312,7 +312,7 @@
     <string name="Rate_Your_Customer">Rate Your Customer</string>
     <string name="skip">Skip</string>
     <string name="destination_menu">Destination</string>
-    <string name="no_current_notification">No Current Notification</string>
+    <string name="no_current_notification">No Current Notifications</string>
     <string name="phone">Phone :</string>
     <string name="GENERATE_OTP">Generate OTP</string>
     <string name="signin_via_otp">Sign in via OTP</string>
