--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-fr/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-fr/strings.xml
@@ -137,7 +137,7 @@
 
 <string name="about">A propos</string>
 
-<string name="support">Support</string>
+<string name="support">Soutien</string>
 
 <string name="sos">SOS</string>
 
@@ -1561,7 +1561,6 @@ Vous n\'avez pas de compte chauffeur?"
 
 <string name="view_wallet_transactions">Afficher les transactions de portefeuille</string>
 
-<string name="dont_touch_me">DontTouchMe</string>
 
 <string name="get_support">Obtenir de l\'aide</string>
 
@@ -1728,6 +1727,13 @@ de Hezz. S\'il vous plaît n\'allez pas plus loin, si cela ne va pas avec vous.
  <string name="city_unavailable">Pardon! Actuellement, nos services ne sont pas disponibles dans votre ville.</string>
  <string name="number_should_not_start_with_zero">Le numéro de téléphone ne doit pas commencer par 0.</string>
 
-
+ <string name="rate_us_on_play_store">Evaluez-nous sur Play Store</string>
+ <string name="like_us_on_facebook">Aimez-nous sur facebook</string>
+ <string name="terms_and_conditions">Termes et conditions</string>
+ <string name="privacy_policy">Politique de confidentialité</string>
+ <string name="who_are_we">Qui sommes nous?</string>
+ <string name="facebook_not_installed">L'application Facebook n'est pas activée</string>
+ <string name="please_enter_your_name">S'il vous plaît entrez votre nom</string>
+ <string name="select_vehicle_type">Sélectionnez le type de véhicule</string>
 
 </resources>																									
